Ajout d'un loader + animation arrivée menu

--- a/restaurants/ledélicedessens.html
+++ b/restaurants/ledélicedessens.html
@@ -144,8 +144,9 @@
 
         </section>
 
+        <div class="btn">
         <button><span>Commander</span></button>
-
+        </div>
     </div>
 
 </main>
