--- a/restaurants/lapalettedugoût.html
+++ b/restaurants/lapalettedugoût.html
@@ -144,7 +144,9 @@
 
         </section>
 
+        <div class="btn">
         <button><span>Commander</span></button>
+        </div>
 
     </div>
 
