--- a/restaurants/àlafrançaise.html
+++ b/restaurants/àlafrançaise.html
@@ -144,8 +144,9 @@
 
         </section>
 
+        <div class="btn">
         <button><span>Commander</span></button>
-
+        </div>
     </div>
 
 </main>
