Modification de quelques détails en attente de validation

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <div class="loader">
             <span class="letter l1">F</span>
-            <span class="letter l2">o</span>
-            <span class="letter l3">o</span>
+            <span class="letter l2"><i class="fa-solid fa-bowl-food"></i></span>
+            <span class="letter l3"><i class="fa-solid fa-bowl-food"></i></span>
             <span class="letter l4">d</span>
             <span class="letter l5">L</span>
             <span class="letter l6">o</span>
